fix display icon rating on mobile in countries page

--- a/css/style.css
+++ b/css/style.css
@@ -6747,13 +6747,13 @@ table.model-4 tr td:nth-of-type(3) {
   color: #7c8082;
   font-size: 14px;
 }
-.add-new-styles .result-number .user-info p [class*="i-"] {
+.add-new-styles .result-number .user-info p [class*="icon-"] {
   color: #73ae3a;
   margin-right: 6px;
-  font-size: 15px;
+  font-size: 20px;
   display: inline-block;
   vertical-align: middle;
-  width: 24px;
+  width: 34px;
 }
 .add-new-styles .result-number .review-like {
   position: absolute;
@@ -13839,7 +13839,6 @@ span.error_message.error_constraint_required {
     .logo,
   .footer-logo,
   .subscribe-icon,
-  .stars span,
   .tours-link a,
   .shaman-box a span,
   .help-join .help-link span,
